fix overlapping drop down arrows

--- a/dpc-web/app/assets/stylesheets/components/_navbar.scss
+++ b/dpc-web/app/assets/stylesheets/components/_navbar.scss
@@ -203,7 +203,7 @@
   text-decoration: none;
 
   @media (min-width: $width-nav) {
-    color: white;
+    color: $color-white;
   }
 }
 
